--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
   "license": "MIT",
   "dependencies": {
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "sass-loader": "^13.0.2"
+  },
+  "scripts": {
+    "dev": "webpack serve",
+    "build": "cross-env NODE_ENV=production webpack"
   },
   "devDependencies": {
     "@babel/cli": "^7.17.6",
@@ -13,8 +18,12 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "babel-loader": "^8.2.4",
+    "cross-env": "^7.0.3",
+    "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
     "http-proxy-middleware": "^2.0.6",
+    "node-sass": "^7.0.1",
+    "style-loader": "^3.3.1",
     "webpack": "^5.71.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "3.11.1"
